sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:20: error: not found: value i
		}while(i>0)
                       ^