sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
	var j:Int=8;
	var ech:Boolean=false;
	do{
		ech=false;	
		for(i<-0 to 8){
			if(getValeur(i)>getValeur(i+1)){
				echange(i,i+1);
				ech=true;
			}
		}

		do{
			if(getValeur(j)>getValeur(j+1)){
				echange(j,j+1);
				ech=true;
			}
			j=j-1;
		}while(i>0)
	}while(ech==true)
}
